:hammer: Reading cinema db information to fill GUI elements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory(plugin)
 
 # ------------------------------------- INSTALL FILES REQUIRED BY THE PLUGIN ------------------------------
 install(DIRECTORY "gui"                DESTINATION "share/resources")
-install(DIRECTORY "data"               DESTINATION "share/vestec/data")
+install(DIRECTORY "data"               DESTINATION "share/vestec")
