:wrench: Refactoring GDAL functionalities. Now texture loading is done is sperated GDAL class

--- a/plugin/CMakeLists.txt
+++ b/plugin/CMakeLists.txt
@@ -53,6 +53,11 @@ file(GLOB VESTEC_RENDERING_SOURCE_FILES Rendering/*.cpp)
 file(GLOB VESTEC_RENDERING_HEADER_FILES Rendering/*.hpp)
 source_group(rendering FILES ${VESTEC_RENDERING_SOURCE_FILES} ${VESTEC_RENDERING_HEADER_FILES})
 
+# VESTEC rendering in cosmoscout
+file(GLOB VESTEC_COMMON_SOURCE_FILES common/*.cpp)
+file(GLOB VESTEC_COMMON_HEADER_FILES common/*.hpp)
+source_group(rendering FILES ${VESTEC_RENDERING_SOURCE_FILES} ${VESTEC_RENDERING_HEADER_FILES})
+
 # VESTEC js files for the floweditor
 file(GLOB VESTEC_JS_FILES VestecNodes/*.js)
 source_group(vestecJS FILES ${VESTEC_JS_FILES})
@@ -64,6 +69,7 @@ add_library(csp-vestec SHARED
   ${NODEEDITOR_SOURCE_FILES} ${NODEEDITOR_HEADER_FILES}
   ${VESTEC_SOURCE_FILES} ${VESTEC_HEADER_FILES}
   ${VESTEC_RENDERING_SOURCE_FILES} ${VESTEC_RENDERING_HEADER_FILES}
+  ${VESTEC_COMMON_SOURCE_FILES} ${VESTEC_COMMON_HEADER_FILES}
 )
 
 # Enable OpenMP
