:truck: Move plugin -> src | rename namespace to csp::vestec

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 # ------------------------------------- build plugin ------------------------------------------------------
 cmake_minimum_required(VERSION 3.12)
 
-add_subdirectory(plugin)
+add_subdirectory(src)
 
 # ------------------------------------- INSTALL FILES REQUIRED BY THE PLUGIN ------------------------------
 install(DIRECTORY "gui"                DESTINATION "share/resources")
