:tada: Add zipper submodule
Zipper: https://github.com/sebastiandev/zipper

Todo: lib is not automatically found by CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,7 +87,8 @@ target_link_libraries(csp-vestec
 		cs-scene
         Boost::program_options
         ttk::vtk::ttkAll
-		    GDAL::GDAL
+		GDAL::GDAL
+        ${COSMOSCOUT_EXTERNALS_DIR}/lib/Zipper.lib
 )
 
 # Define include direcories
