:wrench: Update diseases simulation node
- Add playback speed control slider

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,5 @@ cmake_minimum_required(VERSION 3.12)
 add_subdirectory(src)
 
 # ------------------------------------- INSTALL FILES REQUIRED BY THE PLUGIN ------------------------------
-install(DIRECTORY "gui"                DESTINATION "share/resources")
-install(DIRECTORY "data"               DESTINATION "share/vestec")
+install(DIRECTORY "gui"                DESTINATION "share/resources"                REGEX "node_modules" EXCLUDE)
+#install(DIRECTORY "data"               DESTINATION "share/vestec")
