--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,13 @@ endif()
 if (DEFINED ENV{GDAL_DIR})
   SET(GDAL_DIR "$ENV{GDAL_DIR}")
 else()
-  SET(GDAL_DIR ${COSMOSCOUT_EXTERNALS_DIR}/gdal)
+  if (MSVC)
+    SET(GDAL_DIR ${COSMOSCOUT_EXTERNALS_DIR}/gdal)
+  else()
+    SET(GDAL_DIR ${INSTALL_DIR})
+    SET(GDAL_LIBRARY "${INSTALL_DIR}/lib/libgdal.so")
+    SET(GDAL_INCLUDE_DIR "${INSTALL_DIR}/include")
+  endif()
 endif()
 
 # Find third party dependencies
