:beetle: Fix installing GDAL on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ add_subdirectory(src)
 
 # ------------------------------------- INSTALL FILES REQUIRED BY THE PLUGIN ------------------------------
 install(DIRECTORY "gui"                DESTINATION "share/resources"                REGEX "node_modules" EXCLUDE)
-#install(DIRECTORY "data"               DESTINATION "share/vestec")
+install(DIRECTORY "data"               DESTINATION "share/vestec")
