:beetle: Gdal from source includes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,7 +24,8 @@ else()
   if (MSVC)
     SET(GDAL_DIR ${COSMOSCOUT_EXTERNALS_DIR}/gdal)
   else()
-    SET(GDAL_DIR ${INSTALL_DIR})
+    SET(GDAL_DIR ${COSMOSCOUT_EXTERNALS_DIR})
+    SET(GDAL_INCLUDE_DIR "${COSMOSCOUT_EXTERNALS_DIR}/include")
   endif()
 endif()
 
