:arror_up_small: Update vtk and ttk

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,13 +9,13 @@
 if (DEFINED ENV{VTK_CMAKE_CONFIG_DIR})
   SET(VTK_DIR "$ENV{VTK_CMAKE_CONFIG_DIR}")
 else()
-  SET(VTK_DIR ${COSMOSCOUT_EXTERNALS_DIR}/lib/cmake/vtk-8.1)
+  SET(VTK_DIR ${COSMOSCOUT_EXTERNALS_DIR}/lib/cmake/vtk-9.0)
 endif()
 
 if (DEFINED ENV{TTKVTK_DIR})
   SET(TTKVTK_DIR "$ENV{TTKVTK_DIR}")
 else()
-  SET(TTKVTK_DIR ${COSMOSCOUT_EXTERNALS_DIR}/lib/cmake/ttk)
+  SET(TTKVTK_DIR ${COSMOSCOUT_EXTERNALS_DIR}/lib/cmake/ttkVTK)
 endif()
 
 if (DEFINED ENV{GDAL_DIR})
@@ -47,6 +47,7 @@ find_package(Boost REQUIRED COMPONENTS filesystem program_options)
 find_package(TTKVTK REQUIRED)
 find_package(GDAL REQUIRED)
 find_package(zipper REQUIRED)
+find_package(VTK REQUIRED)
 
 # The cosmoscout vr vestec plugin project
 file(GLOB SOURCE_FILES *.cpp)
@@ -102,17 +103,19 @@ target_link_libraries(csp-vestec
         cs-scene
         Boost::program_options
         GDAL::GDAL
+        ${VTK_LIBRARIES}
         ttk::vtk::ttkCinemaProductReader
         ttk::vtk::ttkCinemaQuery
         ttk::vtk::ttkCinemaReader
         zipper::zipper
 )
 
-# Define include direcories
+# Define include directories
 target_include_directories(csp-vestec
     PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/..
+        ${VTK_INCLUDE_DIRS}
 )
 
 # --------------------------------------------------------------- install plugin 
