--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Clang-Format
 
 on:
   push:
@@ -15,16 +15,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: Download Clang-Format
+      - name: Download Utilities
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y clang-format
+          sudo apt-get install -y clang-format dos2unix
       - name: Run Clang-Format
         run: |
           SRC_DIR="$( cd "$( dirname "$0" )" && pwd )"
 
           find "./src" "./gui" -type f \( -name '*.cpp' -o -name '*.hpp' -o -name '*.inl' -o -name '*.js' \) -and ! -path '*third-party*' -exec sh -c '
             for file do
+              dos2unix "$file"
               echo "Formatting $file..."
               clang-format -i "$file"
             done
